[project]
name = "midaas"
version = "0.1.0"
description = "A Simple multi account manager micro-service for Asaas"
authors = [
    {name = "Jonhnatha Trigueiro", email = "jon@preludian.com.br"},
]
dependencies = [
    "pynamodb>=6.0.1",
    "fastapi[standard]>=0.115.0",
    "boto3>=1.35.37",
    "pydantic-settings>=2.6.1",
    "asaaspy>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "Proprietary"}


[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-coverage>=0.0",
    "pytest-cov>=6.0.0",
    "vcrpy>=6.0.2",
    "pytest-vcr>=1.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "src/midaas"
]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pdm]
distribution = true
